# demo-electionguard

./: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  DOCKER_README.md  Dockerfile  Dockerfile.frontend  README.md  TESTING_GUIDE.md  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  nginx.conf  pyproject.toml  requirements.txt  run_server.sh  test_ballot_encrypt.py  test_full_flow.py
.claude/: settings.local.json
docs/: PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PROGRESS_UPDATE.md  SESSION_SUMMARY.md  TASK_LIST.md  election-guard--business-terms.md  election-guard--how-vote-work.md  fast-api-best-practices.md  requirements-v2.md  requirements.md
frontend/: index.html
risc0/: README.md
risc0/examples/: Cargo.toml
risc0/examples/castvote/k256/: Cargo.toml
risc0/examples/castvote/k256/methods/guest/: Cargo.toml
risc0/examples/castvote/k256/res/: person.json  receipt_selective_disclosure_groth16.json
risc0/examples/castvote/k256/src/: main.rs
src/: config.py  database.py  exceptions.py  log_handler.py  logging_config.py  main.py  models.py  schemas.py
src/api/: __init__.py  customers.py  vote_events.py  votes.py
src/electionguard_service/: ballot_encryptor.py  key_ceremony.py  manifest_builder.py  tally_ceremony.py
src/groth16/: parameters.py  verifier.py
src/schemas/: __init__.py  common.py  customers.py  vote_events.py  votes.py
src/services/: __init__.py  customers_service.py  vote_events_service.py  votes_service.py
src/utils/: util.py
