[project]
name = "election-guard-demo"
version = "0.1.0"
description = "ElectionGuard voting demo with FastAPI"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi~=0.88.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=1.4.0,<2.0.0",
    "aiosqlite>=0.17.0",
    "pydantic==1.9.0",
    "electionguard==1.4.0",
    "python-multipart>=0.0.5",
    "py-ecc>=7.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
